--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "data-set": "^3.0.0",
         "dom-delegator": "^9.0.0",
-        "vtree": "*",
-        "virtual-dom": "0.0.8"
+        "vtree": "0.0.21",
+        "vdom": "0.0.21"
     }
 }
