--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "",
-    "version": "",
-    "description": "",
-    "dependencies": {
-        "data-set": "^3.0.0",
-        "dom-delegator": "^9.0.0",
-        "vtree": "0.0.21",
-        "vdom": "0.0.21"
-    }
+  "name": "",
+  "version": "",
+  "description": "",
+  "dependencies": {
+    "data-set": "^3.0.0",
+    "dom-delegator": "^9.0.0",
+    "next-tick": "^0.2.2",
+    "vdom": "0.0.21",
+    "vtree": "0.0.21"
+  }
 }
