--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "version": "",
     "description": "",
     "dependencies": {
-        "data-set": "^3.0.0",
-        "dom-delegator": "^9.0.0",
-        "vtree": "0.0.21",
-        "vdom": "0.0.21"
+        "virtual-dom": "2.0.1"
     }
 }
