--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,8 @@
-language: haskell
+sudo: false
+language: none
 install:
-  - cabal sandbox init
-  -
-  - git clone https://github.com/elm-lang/elm-compiler.git
-  - cd elm-compiler
-  - git checkout 0.15.1
-  - cabal sandbox init --sandbox ..
-  - cabal install
-  - cd ..
-  -
-  - git clone https://github.com/elm-lang/elm-package.git
-  - cd elm-package
-  - git checkout 0.5.1
-  - cabal sandbox init --sandbox ..
-  - cabal install
-  - cd ..
-  -
-  - git clone https://github.com/elm-lang/elm-make.git
-  - cd elm-make
-  - git checkout 0.2
-  - cabal sandbox init --sandbox ..
-  - cabal install
-  - cd ..
+  - npm install --global elm@2.0.0
 
-before_script:
-  - export PATH=$PWD/bin:$PATH
 script:
   - cd tests/
   - ./run-tests.sh
